# zoho-cli

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: bump-homebrew.yml
docs/: index.html
skill/: SKILL.md  metadata.openclaw
tests/: test_api.py  test_auth.py  test_cli.py  test_config.py  test_mail.py  test_storage.py  test_utils.py
zoho_cli/: __main__.py  api.py  auth.py  cli.py  config.py  folders.py  mail.py  storage.py  utils.py
