[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoho-cli"
version = "0.1.4"
description = "Zoho Mail JSON CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "idna>=3.0",
    "keyring>=25",
    "platformdirs>=4",
]

[project.scripts]
zoho = "zoho_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["zoho_cli"]
